makeing a branch because this build is missing a lot of jar dependencies, and Natty doesn't know why. So this will (hopefullY) save what work he has done this morning.